Some fixes on mobile display responsivity

--- a/src/App.css
+++ b/src/App.css
@@ -99,22 +99,20 @@ body {
 }
 
 #name {
-  font-size: 3vh;
+  font-size: 1.8rem;
   border-radius: 50px;
   padding: 1vh 2vw;
 }
 
 #menu-btn {
-  box-sizing: content-box;
   display: flex;
-  padding: 0;
-  margin: 0;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   background-color: transparent;
-  border: 1px solid transparent;
   border-radius: 50px;
-  padding: 2vw;
-  height: 100%;
+  padding: 2vh;
+  margin-bottom: 1vh;
 }
 
 #menu-btn:hover {
@@ -122,7 +120,7 @@ body {
 }
 
 #menu-btn > img {
-  height: 100%;
+  height: 1.8rem;
 }
 
 #avatar {
@@ -147,12 +145,12 @@ body {
 }
 
 .mobile-menu {
-  justify-content: space-around;
   font-size: 1.8rem;
   display: flex;
   flex-direction: column;
   position: fixed;
-  top: 0;
+  top: 50%;
+  transform: translate(0, -50%);
   padding: 7vh 0;
   background-color: var(--color-background);
   width: 100%;
